Bug 984434 - Change ImageBridgeChild::FlushAllImages() to use async ipc r=nical