gfx/layers/client/ImageClient.h
@@ -11,6 +11,7 @@
 #include "mozilla/Attributes.h"         // for MOZ_OVERRIDE
 #include "mozilla/RefPtr.h"             // for RefPtr, TemporaryRef
 #include "mozilla/gfx/Types.h"          // for SurfaceFormat
+#include "mozilla/layers/AsyncTransactionTracker.h" // for AsyncTransactionTracker
 #include "mozilla/layers/CompositableClient.h"  // for CompositableClient
 #include "mozilla/layers/CompositorTypes.h"  // for CompositableType, etc
 #include "mozilla/layers/LayersSurfaces.h"  // for SurfaceDescriptor
@@ -23,6 +24,7 @@ namespace mozilla {
 namespace layers {
 
 class CompositableForwarder;
+class AsyncTransactionTracker;
 class Image;
 class ImageContainer;
 class ShadowableLayer;
@@ -62,9 +64,19 @@ public:
   virtual already_AddRefed<Image> CreateImage(ImageFormat aFormat) = 0;
 
   /**
-   * Synchronously remove all the textures used by the image client.
+   * Create AsyncTransactionTracker that is used for FlushAllImagesAsync().
    */
-  virtual void FlushAllImages(bool aExceptFront) {}
+  virtual TemporaryRef<AsyncTransactionTracker> PrepareFlushAllImages() { return nullptr; }
+
+  /**
+   * asynchronously remove all the textures used by the image client.
+   *
+   */
+  virtual void FlushAllImages(bool aExceptFront,
+                              AsyncTransactionTracker* aAsyncTransactionTracker) {}
+
+  virtual void RemoveTextureFromCompositable(TextureClient* aTexture,
+                                             AsyncTransactionTracker* aAsyncTransactionTracker = nullptr);
 
 protected:
   ImageClient(CompositableForwarder* aFwd, TextureFlags aFlags,
@@ -95,7 +107,10 @@ public:
 
   virtual already_AddRefed<Image> CreateImage(ImageFormat aFormat) MOZ_OVERRIDE;
 
-  virtual void FlushAllImages(bool aExceptFront) MOZ_OVERRIDE;
+  virtual TemporaryRef<AsyncTransactionTracker> PrepareFlushAllImages() MOZ_OVERRIDE;
+
+  virtual void FlushAllImages(bool aExceptFront,
+                              AsyncTransactionTracker* aAsyncTransactionTracker) MOZ_OVERRIDE;
 
 protected:
   virtual bool UpdateImageInternal(ImageContainer* aContainer, uint32_t aContentFlags, bool* aIsSwapped);
@@ -118,7 +133,8 @@ public:
 
   virtual void OnDetach() MOZ_OVERRIDE;
 
-  virtual void FlushAllImages(bool aExceptFront) MOZ_OVERRIDE;
+  virtual void FlushAllImages(bool aExceptFront,
+                              AsyncTransactionTracker* aAsyncTransactionTracker) MOZ_OVERRIDE;
 
 protected:
   RefPtr<TextureClient> mBackBuffer;
