gfx/layers/ipc/ImageBridgeParent.h
@@ -104,6 +104,8 @@ public:
 
   virtual bool IsSameProcess() const MOZ_OVERRIDE;
 
+  virtual void ReplyRemoveTexture(const OpReplyRemoveTexture& aReply) MOZ_OVERRIDE;
+
   // Overriden from IToplevelProtocol
   IToplevelProtocol*
   CloneToplevel(const InfallibleTArray<ProtocolFdMapping>& aFds,
